# disease-gene-predictor

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  disease_ids.txt  edge_index_dict.pt  main.py  pyproject.toml  x_dict.pt
data/: __init__.py  dataset.py  disgenet_client.py  disgenet_datamodule.py
docs/: main.tex
docs/sections/: 01-overview.tex  02-containerisation.tex  03-data.tex  04-baseline.tex  05-improvement.tex  06-evaluation.tex  07-mlaas.tex
model/: model.py
